# Group2Plugin

./: LICENSE  README.md  mkdocs.yml  seed_competition_app.py  segmentation_app.py  setup.cfg  simple_threshold_3D_app.py  simple_threshold_app.py  tox.ini
docs/: index.md
src/group2plugin/: napari.yaml
src/group2plugin/_tests/: test_widget.py
src/group2plugin/ift/: ift_gui.py
src/group2plugin/readers/: nii_reader.py
src/group2plugin/threshold/: .simple_threshold.py
