[metadata]
name = Group2Plugin
version = 0.0.1
author = Napari Hackers Group 2
author_email = bnorthan@gmail.com
url = https://github.com/bnorthan/Group2Plugin
license = BSD-3-Clause
description = Napari Interactive Segmentation
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/bnorthan/Group2Plugin/issues
    Documentation = https://github.com/bnorthan/Group2Plugin#README.md
    Source Code = https://github.com/bnorthan/Group2Plugin
    User Support = https://github.com/bnorthan/Group2Plugin/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
Group2Plugin = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    Group2Plugin = group2plugin:napari.yaml
